added stuff to index

--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
         <meta charset="utf-8">
         <title>My Very First, Maybe Second, Website</title>
     </head>
+    <body> 
+        <h1>This is a header (1), hey.</h1>
+        <h2>This is a header (2), hey.</h2>
 
+        THIS MIGHT BE TEXT
+        <div>
+        <img src="this might be frank ocean.jpg">
+        <caption>THIS MIGHT BE FRANK OCEAN</caption>
+        </div>
+    </body>
  </html>
