--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
  <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My Very First, Maybe Second, Website</title>
+        <title>THIS MIGHT BE FRANK OCEAN</title> 
+        <link rel="shortcut icon" type="image/jpg" href="this might be frank ocean.jpg"/>
     </head>
     <body> 
-        <h1>This is a header (1), hey.</h1>
-        <h2>This is a header (2), hey.</h2>
-
+        <div style="background-color: #f49301; height:480px; padding-top:80px;">
+        <h1>THIS MIGHT BE A TITLE.</h1>
         THIS MIGHT BE TEXT
-        <div>
+        
         <img src="this might be frank ocean.jpg">
         <caption>THIS MIGHT BE FRANK OCEAN</caption>
         </div>
